refactor(server): Get client id from header
