# docs/swagger.yml
@@ -41,7 +41,7 @@ paths:
                                         properties:
                                             id:
                                                 type: string
-                                                default: "2feff503-2bd3-41da-b0dd-b27101fd0031"
+                                                default: '2feff503-2bd3-41da-b0dd-b27101fd0031'
                                         required:
                                             - id
                 '400':
@@ -50,6 +50,8 @@ paths:
     /api/sms:
         post:
             summary: Send SMS
+            parameters:
+                - $ref: '#/components/parameters/Auth'
             requestBody:
                 required: true
                 content:
@@ -57,8 +59,6 @@ paths:
                         schema:
                             type: object
                             properties:
-                                client_email:
-                                    type: string
                                 receiver_phone:
                                     type: string
                                 content:
@@ -66,7 +66,6 @@ paths:
                                 is_express:
                                     type: boolean
                             required:
-                                - client_email
                                 - receiver_phone
                                 - content
                                 - is_express
@@ -82,7 +81,7 @@ paths:
                                         properties:
                                             message_id:
                                                 type: string
-                                                default: "2feff503-2bd3-41da-b0dd-b27101fd0031"
+                                                default: '2feff503-2bd3-41da-b0dd-b27101fd0031'
                                             price:
                                                 type: number
                                                 default: 52.6
@@ -95,6 +94,14 @@ paths:
                     description: Payment requiered
 
 components:
+    parameters:
+        Auth:
+            name: X-CLIENT-ID
+            in: header
+            description: User id
+            required: true
+            schema:
+                type: string
     responses:
         ValidationFailed:
             description: Validation failed
